--- a/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
+++ b/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
@@ -180,9 +180,9 @@ spec:
                                 by the jobs's .status.failed field, is incremented
                                 and it is checked against the backoffLimit. This field
                                 cannot be used in combination with restartPolicy=OnFailure.
-                                \n This field is alpha-level. To use this field, you
-                                must enable the `JobPodFailurePolicy` feature gate
-                                (disabled by default)."
+                                \n This field is beta-level. It can be used when the
+                                `JobPodFailurePolicy` feature gate is enabled (enabled
+                                by default)."
                               properties:
                                 rules:
                                   description: A list of pod failure policy rules.
@@ -1925,7 +1925,11 @@ spec:
                                                           properties:
                                                             name:
                                                               description: The header
-                                                                field name
+                                                                field name. This will
+                                                                be canonicalized upon
+                                                                output, so case-variant
+                                                                names will be understood
+                                                                as the same header.
                                                               type: string
                                                             value:
                                                               description: The header
@@ -2052,7 +2056,11 @@ spec:
                                                           properties:
                                                             name:
                                                               description: The header
-                                                                field name
+                                                                field name. This will
+                                                                be canonicalized upon
+                                                                output, so case-variant
+                                                                names will be understood
+                                                                as the same header.
                                                               type: string
                                                             value:
                                                               description: The header
@@ -2194,7 +2202,11 @@ spec:
                                                       properties:
                                                         name:
                                                           description: The header
-                                                            field name
+                                                            field name. This will
+                                                            be canonicalized upon
+                                                            output, so case-variant
+                                                            names will be understood
+                                                            as the same header.
                                                           type: string
                                                         value:
                                                           description: The header
@@ -2447,7 +2459,11 @@ spec:
                                                       properties:
                                                         name:
                                                           description: The header
-                                                            field name
+                                                            field name. This will
+                                                            be canonicalized upon
+                                                            output, so case-variant
+                                                            names will be understood
+                                                            as the same header.
                                                           type: string
                                                         value:
                                                           description: The header
@@ -2935,7 +2951,11 @@ spec:
                                                       properties:
                                                         name:
                                                           description: The header
-                                                            field name
+                                                            field name. This will
+                                                            be canonicalized upon
+                                                            output, so case-variant
+                                                            names will be understood
+                                                            as the same header.
                                                           type: string
                                                         value:
                                                           description: The header
@@ -3575,7 +3595,11 @@ spec:
                                                           properties:
                                                             name:
                                                               description: The header
-                                                                field name
+                                                                field name. This will
+                                                                be canonicalized upon
+                                                                output, so case-variant
+                                                                names will be understood
+                                                                as the same header.
                                                               type: string
                                                             value:
                                                               description: The header
@@ -3702,7 +3726,11 @@ spec:
                                                           properties:
                                                             name:
                                                               description: The header
-                                                                field name
+                                                                field name. This will
+                                                                be canonicalized upon
+                                                                output, so case-variant
+                                                                names will be understood
+                                                                as the same header.
                                                               type: string
                                                             value:
                                                               description: The header
@@ -3842,7 +3870,11 @@ spec:
                                                       properties:
                                                         name:
                                                           description: The header
-                                                            field name
+                                                            field name. This will
+                                                            be canonicalized upon
+                                                            output, so case-variant
+                                                            names will be understood
+                                                            as the same header.
                                                           type: string
                                                         value:
                                                           description: The header
@@ -4084,7 +4116,11 @@ spec:
                                                       properties:
                                                         name:
                                                           description: The header
-                                                            field name
+                                                            field name. This will
+                                                            be canonicalized upon
+                                                            output, so case-variant
+                                                            names will be understood
+                                                            as the same header.
                                                           type: string
                                                         value:
                                                           description: The header
@@ -4563,7 +4599,11 @@ spec:
                                                       properties:
                                                         name:
                                                           description: The header
-                                                            field name
+                                                            field name. This will
+                                                            be canonicalized upon
+                                                            output, so case-variant
+                                                            names will be understood
+                                                            as the same header.
                                                           type: string
                                                         value:
                                                           description: The header
@@ -5244,7 +5284,11 @@ spec:
                                                           properties:
                                                             name:
                                                               description: The header
-                                                                field name
+                                                                field name. This will
+                                                                be canonicalized upon
+                                                                output, so case-variant
+                                                                names will be understood
+                                                                as the same header.
                                                               type: string
                                                             value:
                                                               description: The header
@@ -5371,7 +5415,11 @@ spec:
                                                           properties:
                                                             name:
                                                               description: The header
-                                                                field name
+                                                                field name. This will
+                                                                be canonicalized upon
+                                                                output, so case-variant
+                                                                names will be understood
+                                                                as the same header.
                                                               type: string
                                                             value:
                                                               description: The header
@@ -5513,7 +5561,11 @@ spec:
                                                       properties:
                                                         name:
                                                           description: The header
-                                                            field name
+                                                            field name. This will
+                                                            be canonicalized upon
+                                                            output, so case-variant
+                                                            names will be understood
+                                                            as the same header.
                                                           type: string
                                                         value:
                                                           description: The header
@@ -5766,7 +5818,11 @@ spec:
                                                       properties:
                                                         name:
                                                           description: The header
-                                                            field name
+                                                            field name. This will
+                                                            be canonicalized upon
+                                                            output, so case-variant
+                                                            names will be understood
+                                                            as the same header.
                                                           type: string
                                                         value:
                                                           description: The header
@@ -6254,7 +6310,11 @@ spec:
                                                       properties:
                                                         name:
                                                           description: The header
-                                                            field name
+                                                            field name. This will
+                                                            be canonicalized upon
+                                                            output, so case-variant
+                                                            names will be understood
+                                                            as the same header.
                                                           type: string
                                                         value:
                                                           description: The header
