update StartTime before updating the jobs' nodeselector

--- a/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
+++ b/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
@@ -9526,7 +9526,7 @@ spec:
                     - All
                     - Any
                     type: string
-                  replicatedJobNames:
+                  targetReplicatedJobs:
                     description: TargetReplicatedJobs are the names of the replicated
                       jobs the operator will apply to. A null or empty list will apply
                       to all replicatedJobs.
