added active status of jobset for intergration with kueue

--- a/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
+++ b/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
@@ -9656,6 +9656,9 @@ spec:
                 x-kubernetes-list-map-keys:
                 - name
                 x-kubernetes-list-type: map
+              active:
+                description: Active shows if there is at least one active child task
+                type: boolean
               conditions:
                 items:
                   description: "Condition contains details for one aspect of the current
