--- a/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
+++ b/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
@@ -9635,6 +9635,9 @@ spec:
                   description: ReplicatedJobStatus defines the observed ReplicatedJobs
                     Readiness.
                   properties:
+                    active:
+                      format: int32
+                      type: integer
                     failed:
                       format: int32
                       type: integer
@@ -9647,6 +9650,7 @@ spec:
                       format: int32
                       type: integer
                   required:
+                  - active
                   - failed
                   - name
                   - ready
@@ -9656,9 +9660,6 @@ spec:
                 x-kubernetes-list-map-keys:
                 - name
                 x-kubernetes-list-type: map
-              active:
-                description: Active shows if there is at least one active child task
-                type: boolean
               conditions:
                 items:
                   description: "Condition contains details for one aspect of the current
