Added active status of jobset for integration with kueue (#188)
* added active status of jobset for intergration with kueue

* calculate active status in replicated job

* calculate active jobs not pods

--- a/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
+++ b/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
@@ -9635,6 +9635,9 @@ spec:
                   description: ReplicatedJobStatus defines the observed ReplicatedJobs
                     Readiness.
                   properties:
+                    active:
+                      format: int32
+                      type: integer
                     failed:
                       format: int32
                       type: integer
@@ -9647,6 +9650,7 @@ spec:
                       format: int32
                       type: integer
                   required:
+                  - active
                   - failed
                   - name
                   - ready
