--- a/examples/pytorch/resnet.yaml
+++ b/examples/pytorch/resnet.yaml
@@ -19,7 +19,7 @@ spec:
               - containerPort: 3389
               env:
               - name: MASTER_ADDR
-                value: "pytorch-workers-0-0.pytorch-workers"
+                value: "pytorch-workers-0-0.pytorch"
               - name: MASTER_PORT
                 value: "3389"
               # Force python to not buffer output and write directly to stdout, so we can view training logs via `kubectl logs`.
