--- a/sdk/python/pyproject.toml
+++ b/sdk/python/pyproject.toml
@@ -20,4 +20,7 @@ dependencies = [
     "urllib3 >= 1.15.1",
 ]
 [project.optional-dependencies]
-test = ["kubernetes", "pytest>=6.2.5", "pytest-cov>=2.8.1", "pytest-randomly==1.2.3", ]
+test = ["kubernetes", "pytest>=6.2.5", "pytest-cov>=2.8.1", "pytest-randomly==1.2.3"]
+
+[tool.setuptools]
+packages = ["jobset"]
