--- a/sdk/python/pyproject.toml
+++ b/sdk/python/pyproject.toml
@@ -18,9 +18,10 @@ dependencies = [
     "python_dateutil >= 2.5.3",
     "setuptools >= 21.0.0",
     "urllib3 >= 1.15.1",
+    "kubernetes",
 ]
 [project.optional-dependencies]
-test = ["kubernetes", "pytest>=6.2.5", "pytest-cov>=2.8.1", "pytest-randomly==1.2.3"]
+test = ["pytest>=6.2.5", "pytest-cov>=2.8.1", "pytest-randomly==1.2.3"]
 
 [tool.setuptools]
-packages = ["jobset"]
+packages = ["jobset", "jobset.api", "jobset.models"]
