--- a/examples/simple/driver-worker-success-policy.yaml
+++ b/examples/simple/driver-worker-success-policy.yaml
@@ -3,7 +3,7 @@ kind: JobSet
 metadata:
   name: success-policy
 spec:
-# We want to declare our JobSet successful if workers finish
+# We want to declare our JobSet successful if workers finish.
 # If workers finish we should clean up the remaining replicatedJobs.
   successPolicy:
     operator: All
