--- a/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
+++ b/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
@@ -9807,12 +9807,16 @@ spec:
                     succeeded:
                       format: int32
                       type: integer
+                    suspended:
+                      format: int32
+                      type: integer
                   required:
                   - active
                   - failed
                   - name
                   - ready
                   - succeeded
+                  - suspended
                   type: object
                 type: array
                 x-kubernetes-list-map-keys:
