--- a/examples/simple/paralleljobs.yaml
+++ b/examples/simple/paralleljobs.yaml
@@ -1,7 +1,7 @@
 apiVersion: jobset.x-k8s.io/v1alpha2
 kind: JobSet
 metadata:
-  name: sleep
+  name: paralleljobs
 spec:
   replicatedJobs:
   - name: workers
