--- a/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
+++ b/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
@@ -74,6 +74,14 @@ spec:
                           items:
                             type: string
                           type: array
+                        targetReplicatedJobs:
+                          description: TargetReplicatedJobs are the names of the replicated
+                            jobs the operator will apply to. A null or empty list
+                            will apply to all replicatedJobs.
+                          items:
+                            type: string
+                          type: array
+                          x-kubernetes-list-type: atomic
                       required:
                       - action
                       - onJobFailureReasons
