--- a/examples/simple/configurable-failure-policy.yaml
+++ b/examples/simple/configurable-failure-policy.yaml
@@ -5,11 +5,8 @@ metadata:
 spec:
   failurePolicy:
     rules:
-    # This rule will fail the job set immediately if a job failure not triggered by a pod failure happens.
-    # The pod failure policy defined below ignores SIGTERM exit codes (host maintenance), so in effect
-    # this failure policy will allow the JobSet to restart upon host maintenance, but fail immediately
-    # for non-retriable errors (we've broadly included all non-SIGTERM exit codes as non-retriable for
-    # this example).
+    # This rule will fail the JobSet immediately if one of its Jobs fails due to the FailJob action 
+    # in pod failure policy for the Job.
     - action: FailJobSet
       onJobFailureReasons: 
       - PodFailurePolicy
@@ -22,7 +19,10 @@ spec:
         parallelism: 1 # number of nodes per pool
         completions: 1 # number of nodes per pool
         backoffLimit: 0
-        # fail job immediately if job was not killed by SIGTERM (graceful node shutdown for maintenance events)
+        # The pod failure policy defined below ignores SIGTERM exit codes (host maintenance), so in effect
+        # this failure policy will allow the JobSet to restart upon host maintenance, but fail immediately
+        # for non-retriable errors (we've broadly included all non-SIGTERM exit codes as non-retriable for
+        # this example).
         podFailurePolicy:
           rules:
           - action: FailJob
