add suspend field to printcolumn

--- a/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
+++ b/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
@@ -22,6 +22,10 @@ spec:
     - jsonPath: .status.conditions[?(@.type=="Completed")].status
       name: Completed
       type: string
+    - description: JobSet suspended
+      jsonPath: .spec.suspend
+      name: Suspended
+      type: string
     - description: Time this JobSet was created
       jsonPath: .metadata.creationTimestamp
       name: Age
