Startup policy implementation (#246)
* Implement startup policy for jobset

* linter fixes

* fix error event for startup policy finished

* add suspend utility functions

* add active case from pr comments

* pr comment renames

* cleaning up create and suspend for startup policy

* update condition

* update comment on jobset

* rename job suspend functions

* code cleanup and pr comments

* shorten startup policy

* address comments in integration tests

* complicated rebase fixes

* integration tests are now working

* address daniels comments

* rename variable

* update with more comments from daniel

* pr comments

* missed one ensure condition

* update manifests

* update deepcopy

* daniel comments

* formatting fixes

* add order option to integration test

--- a/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
+++ b/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
@@ -8280,6 +8280,26 @@ spec:
                 x-kubernetes-list-map-keys:
                 - name
                 x-kubernetes-list-type: map
+              startupPolicy:
+                description: StartupPolicy, if set, configures in what order jobs
+                  must be started
+                properties:
+                  startupPolicyOrder:
+                    description: |-
+                      StartupPolicyOrder determines the startup order of the ReplicatedJobs.
+                      AnyOrder means to start replicated jobs in any order.
+                      InOrder means to start them as they are listed in the JobSet. A ReplicatedJob is started only
+                      when all the jobs of the previous one are ready.
+                    enum:
+                    - AnyOrder
+                    - InOrder
+                    type: string
+                required:
+                - startupPolicyOrder
+                type: object
+                x-kubernetes-validations:
+                - message: Value is immutable
+                  rule: self == oldSelf
               successPolicy:
                 description: |-
                   SuccessPolicy configures when to declare the JobSet as
